--- a/pomodoro.html
+++ b/pomodoro.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pomodoro Timer</title>
-    <link rel="stylesheet" 
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="./pomodoro.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./pomodoro.css" />
   </head>
   <body>
     <div id="root"></div>
+    <audio
+      id="beep"
+      preload="auto"
+      src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"
+    ></audio>
     <!--Programmed scripts-->
-    <script  src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-    <script  src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-    
-     <!-- DON'T use babel in production: -->
-     <script src="https://unpkg.com/@babel/standalone/babel.min.js" defer></script>
-<script src="./pomodoro.js" type="text/babel"></script>
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
 
+    <!-- DON'T use babel in production: -->
+    <script
+      src="https://unpkg.com/@babel/standalone/babel.min.js"
+      defer
+    ></script>
+    <script src="./pomodoro.js" type="text/babel"></script>
   </body>
 </html>
- 
