--- a/pomodoro.html
+++ b/pomodoro.html
@@ -12,11 +12,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <audio
-      id="beep"
-      preload="auto"
-      src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/audio/BeepSound.wav"
-    ></audio>
+    <audio id="beep" preload="auto" src="./assets/BeepSound.wav"></audio>
     <!--Programmed scripts-->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
